crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/valid/same_value_different_binding.js
const foo = 1;
export { foo };

const bar = foo;
export default bar;