crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/invalid/named_default.js
const foo = 1;

export { foo as default };
export { foo };